# meuCafeList

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  deploy.yml  mavenado.sh  nginx.conf
.github/workflows/: ci.yml
client/: .dockerignore  .env.docker  .gitignore  Cargo.toml  Dockerfile
client/src/: main.rs
scripts/: ccr.sh  setup.sh  skel.sh
server/: Dockerfile  pom.xml
server/src/main/java/com/meucafelist/app/: App.java
server/src/test/java/com/meucafelist/app/: AppTest.java
