[package]
name = "client"
version = "0.1.0"
edition = "2021"
keywords = ["yew", "trunk"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#yew = "0.21.0"
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = "0.18.0"

